--- a/android/app/src/main/res/layout/activity_industry_worker_info.xml
+++ b/android/app/src/main/res/layout/activity_industry_worker_info.xml
@@ -12,10 +12,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,8 +29,8 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="backToProfile"
             android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
@@ -38,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:gravity="center"
             android:text="Çalışan Bilgisi"
             android:textColor="#000000"
@@ -49,6 +50,7 @@
 
     <!--ScrollView-->
     <ScrollView
+        android:id="@+id/scrollView18"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -127,7 +129,7 @@
             <Button
                 android:id="@+id/saveEmployeeInfo"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="@dimen/button_height"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
@@ -137,7 +139,7 @@
                 android:onClick="saveIndustryInfo"
                 android:text="Kaydet"
                 android:textColor="#FFFFFF"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_normal"
                 android:textStyle="bold"
                 android:translationZ="4dp"
                 app:cornerRadius="10dp"
