--- a/android/app/src/main/res/layout/activity_pending_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_pending_request_detail.xml
@@ -12,10 +12,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView28"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,8 +29,8 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="prevPage"
             android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
@@ -39,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:gravity="center"
             android:text="Talep Detayı"
             android:textColor="#000000"
@@ -49,6 +50,7 @@
 
     <!-- ScrollView -->
     <ScrollView
+        android:id="@+id/scrollView28"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -273,18 +275,25 @@
 
                     <EditText
                         android:id="@+id/adminMessage"
-                        android:layout_width="310dp"
-                        android:layout_height="100dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginHorizontal="@dimen/margin_normal"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/edittext_bg"
-                        android:ems="15"
+                        android:ems="10"
                         android:gravity="start|top"
                         android:inputType="textMultiLine"
-                        android:padding="10dp"
+                        android:minHeight="100dp"
+                        android:paddingHorizontal="@dimen/padding_normal"
+                        android:paddingVertical="@dimen/padding_small"
                         android:textColor="#000000"
-                        android:textSize="16sp"
-                        android:textStyle="normal" />
+                        android:textSize="@dimen/text_normal"
+                        android:textStyle="normal"
+                        android:scrollbars="vertical"
+                        android:overScrollMode="always"
+                        android:importantForAutofill="no"
+                        tools:ignore="Autofill" />
 
                 </LinearLayout>
 
