--- a/android/app/src/main/res/drawable/tag_background.xml
+++ b/android/app/src/main/res/drawable/tag_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#1A9AAF" />
+    <solid android:color="#124090" />
     <corners android:radius="12dp" />
 </shape>
