--- a/android/app/src/main/res/layout/activity_appoint_academician.xml
+++ b/android/app/src/main/res/layout/activity_appoint_academician.xml
@@ -1,86 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".view.academicianView.AppointAcademicianActivity">
 
     <!-- Header -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="12dp"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/searchView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp">
 
-
         <ImageView
             android:id="@+id/prevPage"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="prevPage"
             android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
-
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:gravity="center"
             android:text="Akademisyen Ata"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_normal2"
             android:textStyle="bold" />
+
     </com.google.android.material.card.MaterialCardView>
 
     <!--Search box-->
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="12dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginHorizontal="@dimen/margin_normal"
+        android:layout_marginTop="@dimen/margin_normal"
         android:background="@drawable/search_bg"
+        android:elevation="4dp"
         android:iconifiedByDefault="false"
         android:queryHint="Akademisyen ara..."
-        android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
     <!--Akademisyen ata butonu-->
     <Button
         android:id="@+id/btnAppointAcademician"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_height="@dimen/button_height"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/margin_normal"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_normal"
         android:backgroundTint="#124090"
-        android:visibility="gone"
         android:elevation="8dp"
         android:onClick="appointAcademician"
         android:text="Akademisyen Ata"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="@dimen/text_normal"
         android:textStyle="bold"
         android:translationZ="4dp"
-        app:cornerRadius="10dp"
+        android:visibility="gone"
+        app:cornerRadius="@dimen/card_corner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
@@ -91,29 +92,30 @@
         android:id="@+id/selectedAcademiciansChipGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:padding="5dp"
-        app:singleLine="false"
-        app:chipSpacing="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btnAppointAcademician"
+        android:layout_marginStart="@dimen/margin_normal"
+        android:layout_marginEnd="@dimen/margin_normal"
+        android:padding="@dimen/padding_normal"
+        app:chipSpacing="@dimen/margin_small"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/btnAppointAcademician"
+        app:singleLine="false" />
 
     <!--Recyclerview-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/appointAcademicianRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="5dp"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
         android:clipToPadding="false"
         android:overScrollMode="always"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+        android:paddingTop="@dimen/padding_normal"
+        android:paddingBottom="@dimen/padding_normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/selectedAcademiciansChipGroup"
         tools:listitem="@layout/item_request_card" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
