--- a/android/app/src/main/res/layout/activity_department_info.xml
+++ b/android/app/src/main/res/layout/activity_department_info.xml
@@ -12,24 +12,24 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp">
 
-
         <ImageView
             android:id="@+id/backToProfile"
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="backToProfile"
             android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
@@ -39,16 +39,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:gravity="center"
             android:text="Bölüm Bilgileri"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_normal2"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
     <!--ScrollView-->
     <ScrollView
+        android:id="@+id/scrollView14"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -71,18 +72,18 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="130dp"
+                android:layout_marginTop="100dp"
                 android:text="Bölüm Adı"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="@dimen/text_normal2"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/departmentName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Bölümünüzü Girin"
@@ -103,15 +104,15 @@
                 android:layout_marginTop="10dp"
                 android:text="Sınıf"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="@dimen/text_normal2"
                 android:textStyle="bold" />
 
             <AutoCompleteTextView
                 android:id="@+id/classNumber"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/edittext_bg"
                 android:clickable="true"
@@ -129,9 +130,9 @@
             <Button
                 android:id="@+id/saveDepartmentInfo"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginHorizontal="20dp"
+                android:layout_height="@dimen/button_height"
                 android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="400dp"
                 android:backgroundTint="#124090"
@@ -139,7 +140,7 @@
                 android:onClick="saveDepartmentInfo"
                 android:text="Kaydet"
                 android:textColor="#FFFFFF"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_normal"
                 android:textStyle="bold"
                 android:translationZ="4dp"
                 app:cornerRadius="10dp"
