--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -23,90 +23,73 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="20dp">
-
+            android:padding="@dimen/margin_large">
 
             <!-- Logo -->
             <ImageView
                 android:id="@+id/logoTto"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="40dp"
-                app:layout_constraintBottom_toTopOf="@+id/appName"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="@dimen/margin_large"
+                android:contentDescription="Logo"
                 app:srcCompat="@drawable/usi_logo" />
 
             <TextView
                 android:id="@+id/appName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/margin_normal"
                 android:text="Sanayi"
                 android:textColor="#000000"
-                android:textSize="28sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/logoTto" />
+                android:textSize="@dimen/text_xlarge"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/signInText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="@dimen/margin_normal"
                 android:text="Giriş Yap"
                 android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/appName" />
+                android:textSize="@dimen/text_large"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/chooseText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/margin_small"
                 android:text="Giriş yapmak için lütfen bilgilerinizi giriniz"
                 android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/welcomeText" />
+                android:textSize="@dimen/text_normal" />
 
             <!-- E-mail -->
             <EditText
                 android:id="@+id/industryMail"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="6dp"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/button_height"
+                android:layout_marginTop="@dimen/margin_normal"
                 android:background="@drawable/edittext_bg"
                 android:hint="E-Mail"
                 android:inputType="textEmailAddress"
-                android:padding="15dp"
+                android:padding="@dimen/padding_normal"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_normal2" />
 
             <!-- Şifre -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginVertical="5dp"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/button_height"
+                android:layout_marginTop="@dimen/margin_top_header"
                 android:background="@drawable/edittext_bg"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:padding="12dp">
+                android:paddingHorizontal="@dimen/padding_normal">
 
                 <EditText
                     android:id="@+id/industryPassword"
@@ -118,11 +101,11 @@
                     android:inputType="textPassword"
                     android:textColor="#000000"
                     android:textColorHint="#999999"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_normal2" />
 
                 <ImageView
                     android:id="@+id/ivTogglePassword"
-                    android:layout_width="35dp"
+                    android:layout_width="37dp"
                     android:layout_height="wrap_content"
                     android:contentDescription="Şifreyi Göster"
                     android:onClick="showPassword"
@@ -136,61 +119,57 @@
             <Button
                 android:id="@+id/signIn"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="@dimen/button_height"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="5dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/margin_normal"
                 android:backgroundTint="#124090"
                 android:onClick="signIn"
                 android:text="Giriş Yap"
                 android:textColor="#FFFFFF"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_normal"
                 android:textStyle="bold"
                 app:cornerRadius="10dp"
                 tools:ignore="OnClick" />
 
+            <!--Veya-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="@dimen/margin_normal"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <View
-                    android:layout_width="140dp"
+                    android:layout_width="150dp"
                     android:layout_height="1dp"
-                    android:layout_marginHorizontal="10dp"
                     android:background="#999999" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_horizontal_s"
                     android:text="veya"
                     android:textColor="#888888"
-                    android:textSize="15sp" />
+                    android:textSize="@dimen/text_normal" />
 
                 <View
-                    android:layout_width="140dp"
+                    android:layout_width="150dp"
                     android:layout_height="1dp"
-                    android:layout_marginHorizontal="10dp"
                     android:background="#999999" />
-
             </LinearLayout>
 
             <!-- Kayıt ol -->
             <Button
                 android:id="@+id/signUpIndustry"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginVertical="5dp"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginVertical="@dimen/margin_xsmall"
                 android:backgroundTint="#EEEEEE"
                 android:onClick="signUpIndustry"
                 android:text="Kayıt Ol"
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_normal"
                 app:cornerRadius="10dp"
                 tools:ignore="OnClick" />
 
@@ -198,35 +177,25 @@
             <Button
                 android:id="@+id/forgotPassword"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginVertical="5dp"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginVertical="@dimen/margin_small"
                 android:backgroundTint="#EEEEEE"
                 android:text="Şifremi Unuttum"
                 android:textColor="#000000"
-                android:textSize="15sp"
-                app:cornerRadius="10dp"
-                tools:ignore="OnClick" />
+                android:textSize="@dimen/text_normal"
+                app:cornerRadius="10dp" />
 
             <!-- Alt Bilgi -->
             <TextView
                 android:id="@+id/footerText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/margin_large"
                 android:layout_marginBottom="400dp"
                 android:text="@string/text_signIn"
                 android:textAlignment="center"
                 android:textColor="#888888"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.491"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnIndustry" />
+                android:textSize="@dimen/text_small" />
 
         </LinearLayout>
     </ScrollView>
