--- a/android/app/src/main/res/layout/activity_request_detail_academician.xml
+++ b/android/app/src/main/res/layout/activity_request_detail_academician.xml
@@ -12,10 +12,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView29"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,8 +28,8 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="previousPage"
             android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
@@ -37,16 +38,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:gravity="center"
             android:text="Talep Detayı"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_normal2"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
     <!-- ScrollView -->
     <ScrollView
+        android:id="@+id/scrollView29"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -351,18 +353,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
                     android:text="Başvuru Yapanlar"
-                    android:visibility="visible"
                     android:textColor="#333333"
                     android:textSize="15sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="visible" />
 
                 <LinearLayout
                     android:id="@+id/appointCardContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="visible"
                     android:orientation="vertical"
-                    android:paddingVertical="5dp">
+                    android:paddingVertical="5dp"
+                    android:visibility="visible">
 
                     <LinearLayout
                         android:id="@+id/isApply"
