--- a/android/app/src/main/res/layout/activity_student_info.xml
+++ b/android/app/src/main/res/layout/activity_student_info.xml
@@ -12,10 +12,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,27 +28,28 @@
             android:layout_width="17dp"
             android:layout_height="17dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:onClick="backToProfile"
             android:src="@drawable/back_icon"
             tools:ignore="OnClick" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:gravity="center"
             android:text="Öğrenci Bilgileri"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_normal2"
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
 
     <!--ScrollView-->
     <ScrollView
+        android:id="@+id/scrollView12"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -70,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="65dp"
                 android:text="Öğrenci Adı"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -140,7 +142,7 @@
                 android:layout_marginBottom="6dp"
                 android:background="@drawable/edittext_bg"
                 android:hint="Telefonunuzu Girin"
-                android:inputType="text"
+                android:inputType="number"
                 android:padding="15dp"
                 android:textColor="#000000"
                 android:textColorHint="#999999"
@@ -149,7 +151,7 @@
             <Button
                 android:id="@+id/saveStudentInfo"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="@dimen/button_height"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
@@ -159,7 +161,7 @@
                 android:onClick="saveStudentInfo"
                 android:text="Kaydet"
                 android:textColor="#FFFFFF"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_normal"
                 android:textStyle="bold"
                 android:translationZ="4dp"
                 app:cornerRadius="10dp"
