--- a/android/app/src/main/res/layout/fragment_create_request_student.xml
+++ b/android/app/src/main/res/layout/fragment_create_request_student.xml
@@ -12,10 +12,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/requestStudentRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +31,7 @@
             android:gravity="center"
             android:text="Taleplerim"
             android:textColor="#000000"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_large"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
@@ -53,13 +54,13 @@
     <Button
         android:id="@+id/createStudentRequest"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="@dimen/button_height"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
         android:backgroundTint="#124090"
         android:text="Yeni Talep Oluştur"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="@dimen/text_normal"
         android:textStyle="bold"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
