--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -47,9 +47,10 @@
             <!-- Ayarlar ikonu -->
             <ImageView
                 android:id="@+id/settings"
-                android:layout_width="21dp"
-                android:layout_height="21dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
                 android:onClick="goSettings"
                 android:src="@drawable/settings_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
