--- a/android/app/src/main/res/layout/fragment_profile_industry.xml
+++ b/android/app/src/main/res/layout/fragment_profile_industry.xml
@@ -12,7 +12,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
@@ -34,7 +34,7 @@
                 android:gravity="center"
                 android:text="Hesabım"
                 android:textColor="#000000"
-                android:textSize="18sp"
+                android:textSize="@dimen/text_large"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -266,6 +266,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="6dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="10dp"
                 android:onClick="workerInfo"
                 app:cardBackgroundColor="#e8ecf4"
                 app:cardCornerRadius="10dp"
