--- a/android/app/src/main/res/layout/fragment_request_academician.xml
+++ b/android/app/src/main/res/layout/fragment_request_academician.xml
@@ -26,13 +26,13 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/createAcademicianRequest"
         android:layout_width="0dp"
-        android:layout_height="52dp"
+        android:layout_height="@dimen/button_height"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
         android:backgroundTint="#124090"
         android:text="Yeni Talep Oluştur"
         android:textColor="#FFFFFF"
-        android:textSize="15sp"
+        android:textSize="@dimen/text_normal"
         android:textStyle="bold"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
