--- a/android/app/src/main/res/layout/fragment_request_industry.xml
+++ b/android/app/src/main/res/layout/fragment_request_industry.xml
@@ -12,10 +12,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="?attr/actionBarSize"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/requestRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +31,7 @@
             android:gravity="center"
             android:text="Taleplerim"
             android:textColor="#000000"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_large"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
