--- a/android/app/src/main/res/layout/stat_card_summary.xml
+++ b/android/app/src/main/res/layout/stat_card_summary.xml
@@ -26,8 +26,8 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="@dimen/icon_size_medium"
+                android:layout_height="@dimen/icon_size_medium"
                 android:src="@drawable/baseline_supervisor_account_24" />
 
             <TextView
@@ -37,7 +37,7 @@
                 android:layout_marginTop="4dp"
                 android:text=""
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_footer"
                 android:textStyle="bold" />
 
             <TextView
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:text="Akademisyen"
                 android:textColor="#777777"
-                android:textSize="11sp" />
+                android:textSize="@dimen/text_stat_card" />
         </LinearLayout>
 
         <!--Sanayi-->
@@ -57,8 +57,8 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="@dimen/icon_size_medium"
+                android:layout_height="@dimen/icon_size_medium"
                 android:src="@drawable/baseline_factory_24" />
 
             <TextView
@@ -68,7 +68,7 @@
                 android:layout_marginTop="4dp"
                 android:text=""
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_footer"
                 android:textStyle="bold" />
 
             <TextView
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:text="Sanayi"
                 android:textColor="#777777"
-                android:textSize="11sp" />
+                android:textSize="@dimen/text_stat_card" />
         </LinearLayout>
 
         <!--Onaylanan-->
@@ -88,8 +88,8 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="@dimen/icon_size_medium"
+                android:layout_height="@dimen/icon_size_medium"
                 android:src="@drawable/baseline_check_circle_outline_24" />
 
             <TextView
@@ -99,7 +99,7 @@
                 android:layout_marginTop="4dp"
                 android:text=""
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_footer"
                 android:textStyle="bold" />
 
             <TextView
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:text="Onaylanan"
                 android:textColor="#777777"
-                android:textSize="11sp" />
+                android:textSize="@dimen/text_stat_card" />
         </LinearLayout>
 
         <!--Reddedilen-->
@@ -119,8 +119,8 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="@dimen/icon_size_medium"
+                android:layout_height="@dimen/icon_size_medium"
                 android:src="@drawable/baseline_cancel_24" />
 
             <TextView
@@ -130,7 +130,7 @@
                 android:layout_marginTop="4dp"
                 android:text=""
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_footer"
                 android:textStyle="bold" />
 
             <TextView
@@ -138,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:text="Reddedilen"
                 android:textColor="#777777"
-                android:textSize="11sp" />
+                android:textSize="@dimen/text_stat_card" />
         </LinearLayout>
 
         <!--Toplam Talep-->
@@ -150,8 +150,8 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="@dimen/icon_size_medium"
+                android:layout_height="@dimen/icon_size_medium"
                 android:src="@drawable/baseline_description_24" />
 
             <TextView
@@ -161,7 +161,7 @@
                 android:layout_marginTop="4dp"
                 android:text=""
                 android:textColor="#000000"
-                android:textSize="15sp"
+                android:textSize="@dimen/text_footer"
                 android:textStyle="bold" />
 
             <TextView
@@ -169,7 +169,7 @@
                 android:layout_height="wrap_content"
                 android:text="Toplam Talep"
                 android:textColor="#777777"
-                android:textSize="11sp" />
+                android:textSize="@dimen/text_stat_card" />
         </LinearLayout>
     </LinearLayout>
 
